# puls-events-rag

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  test-dataset-template.json
data/test/: test_dataset_annotated.json
scripts/: __init__.py  api_server.py  data_extraction.py  evaluate_rag.py  inspect_data.py  inspect_paris.py  preprocessing.py  rag_system.py  vectorization.py
tests/: test_api.py  test_preprocessing.py  test_rag_system.py  test_vectorization.py
